--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: root
-    url: jdbc:postgresql://localhost/postgres
+    url: jdbc:postgresql://prd-db.cb04ggmik654.ap-northeast-1.rds.amazonaws.com/postgres
     platform: postgres
     initialization-mode: always
     continue-on-error: true
